--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   masonry_grid: ^1.0.0
   flutter_svg: ^1.1.6
   uuid: ^3.0.6
+  string_similarity: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,6 +67,7 @@ flutter:
   assets:
     - lib/assets/images/Image1.jpg
     - lib/assets/icons/plus.svg
+    - lib/assets/icons/check.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
