--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   string_similarity: ^2.0.0
   image_picker: ^0.8.6
   flutter_image_compress: ^1.0.0-nullsafety
+  permission_handler: ^10.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
