--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.6
   flutter_image_compress: ^1.0.0-nullsafety
   permission_handler: ^10.2.0
+  flex_color_picker: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -73,6 +74,9 @@ flutter:
     - lib/assets/icons/check.svg
     - lib/assets/icons/x.svg
     - lib/assets/icons/xFlat.svg
+    - lib/assets/icons/hashtag.svg
+    - lib/assets/icons/image.svg
+    - lib/assets/icons/task.svg
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
