--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_image_compress: ^1.0.0-nullsafety
   permission_handler: ^10.2.0
   flex_color_picker: ^3.0.0
+  localstorage: ^4.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
