--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,22 +41,22 @@ dependencies:
   flutter_image_compress: ^1.0.0-nullsafety
   permission_handler: ^10.2.0
   flex_color_picker: ^3.0.0
-  localstorage: ^4.0.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
