--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_image_compress: ^1.0.0-nullsafety
   permission_handler: ^10.2.0
   flex_color_picker: ^3.0.0
+  material_tag_editor: ^0.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
