--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^10.2.0
   flex_color_picker: ^3.0.0
   material_tag_editor: ^0.1.2
+  path: ^1.8.2
+  path_provider: ^2.0.11
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
