--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,7 @@ dependencies:
   material_tag_editor: ^0.1.2
   path: ^1.8.2
   path_provider: ^2.0.11
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  sqflite: ^2.2.2
 
   
 
