--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_native_timezone: ^2.0.0
 
+
+
   
 
 
@@ -58,10 +60,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: ^2.2.11
   flutter_lints: ^2.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
 
+flutter_native_splash:
+  color: "#2D2D2D"
+  image: "lib/assets/icons/app_icon.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/icons/app_icon.png"
+  adaptive_icon_background: "#2D2D2D"
+  adaptive_icon_foreground: "lib/assets/icons/app_icon.png"
 
 
 # For information on the generic Dart part of this file, see the
